# Convex-Hull-Delaunay-Triangulation-Voronoi-Diagram

./: README.md  points.txt
convex_hull/: CMakeLists.txt  main.cpp
delaunay/: CMakeLists.txt  main.cpp
untitled/: CMakeLists.txt  main.cpp
untitled1/: CMakeLists.txt  main.cpp
voronoi/: CMakeLists.txt  main.cpp
